# anomaly-gym

./: .gitignore  README.md  pyproject.toml
anomaly_gym/: __init__.py
anomaly_gym/common/: func_utils.py  goal_env.py  goal_obs.py  metrics.py  mujoco_utils.py  rotations.py
anomaly_gym/envs/carla_envs/: __init__.py  install_notes.md
anomaly_gym/envs/carla_envs/cfgs/: anomaly_parameters.yaml
anomaly_gym/envs/carla_envs/core/: action.py  observation.py  planners.py  sensors.py  utils.py
anomaly_gym/envs/carla_envs/dbg/: carlaviz_example.py  dump.ipynb  run_carla_viz.sh  test_behaviors.py  test_env.ipynb  vectors.ipynb
anomaly_gym/envs/carla_envs/envs/: anom_lanekeep_env.py  lanekeep_env.py
anomaly_gym/envs/mujoco_envs/: __init__.py
anomaly_gym/envs/mujoco_envs/assets/: half_cheetah.xml  reacher3d.xml
anomaly_gym/envs/mujoco_envs/cfgs/: anomaly_parameters.yaml
anomaly_gym/envs/mujoco_envs/envs/: anom_mujoco_envs.py  cartpole_swingup.py  half_cheetah.py  reacher3D.py
anomaly_gym/envs/sape_envs/: __init__.py
anomaly_gym/envs/sape_envs/cfgs/: anomaly_parameters.yaml
anomaly_gym/envs/sape_envs/core/: base_task.py  entities.py  object_callbacks.py  observation.py  render.py  world.py
anomaly_gym/envs/sape_envs/envs/: anom_sape_envs.py  sape_env.py
anomaly_gym/envs/sape_envs/tasks/: __init__.py  goal_task_0.py  goal_task_1.py  goal_task_2.py
anomaly_gym/envs/ur2l_envs/: __init__.py
anomaly_gym/envs/ur2l_envs/action_setters/: __init__.py  action_setter.py  gripper.py
anomaly_gym/envs/ur2l_envs/cfgs/: anomaly_parameters.yaml
(+51 files in other folders)
