[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomaly_gym"
description = "Anomaly Environments for Reinforcement Learning"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gymnasium==1.1.1",
    "mujoco==3.2.6",
    "pyquaternion==0.9.9",
    "imageio>=2.14.1",
    "shapely>=2.0.6",
    "omegaconf>=2.3.0",
    "tdqm==0.0.1",
    "transforms3d==0.4.2",
    "ur-rtde>=1.6.0",
    "opencv-python>=4.11.0.86",
    "pyrealsense2>=2.55.1.6486",
    "hydra-core==1.3.2",
    "pygame==2.5.2",
    "numpy<2.0",
]

[project.optional-dependencies]
carla = ["carla==0.9.15"]
realsense = [
    "opencv-python>=4.11.0.86",
    "pyrealsense2>=2.55.1.6486",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"


[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
ignore = ["B028", "RUF013"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
